--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="pink">#CE23EC</color>
+    <color name="dark_pink">#702B7C</color>
+    <color name="transparent">#00000000</color>
+    <color name="red">#CD0000</color>
+    <color name="beige">#F5F5DC</color>
+    F5F5DC
 </resources>
