--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,8 +7,51 @@
     android:background="@color/beige">
 
     <RadioGroup
-        android:checkedButton="@+id/offer"
-        android:id="@+id/toggle"
+        android:checkedButton="@+id/lgt_off"
+        android:id="@+id/light_toggle"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_marginBottom="50dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginTop="50dp"
+        android:background="@drawable/out_line"
+        android:orientation="horizontal">
+
+        <RadioButton
+            android:layout_marginEnd="1dp"
+            android:layout_marginTop="1dp"
+            android:layout_marginBottom="1dp"
+            android:id="@+id/lgt_off"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/toggle_widget_background"
+            android:button="@null"
+            android:gravity="center"
+            android:text="@string/lgt_off"
+            android:textColor="@color/white" />
+
+        <RadioButton
+            android:layout_marginTop="1dp"
+            android:layout_marginStart="1dp"
+            android:layout_marginEnd="1dp"
+            android:id="@+id/lgt_on"
+            android:background="@drawable/toggle_widget_background"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:button="@null"
+            android:gravity="center"
+            android:text="@string/lgt_on"
+            android:textColor="@color/white" />
+
+    </RadioGroup>
+
+<!--    brightness slider here-->
+    <RadioGroup
+        android:checkedButton="@+id/sensing_on"
+        android:id="@+id/sensing_toggle"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_marginBottom="50dp"
@@ -22,33 +65,116 @@
             android:layout_marginTop="1dp"
             android:layout_marginStart="1dp"
             android:layout_marginEnd="1dp"
-            android:id="@+id/search"
+            android:id="@+id/sensing_on"
             android:background="@drawable/toggle_widget_background"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:button="@null"
             android:gravity="center"
-            android:text="@string/lgt_on"
+            android:text="@string/sensing_on"
             android:textColor="@color/white" />
 
         <RadioButton
             android:layout_marginEnd="1dp"
             android:layout_marginTop="1dp"
             android:layout_marginBottom="1dp"
-            android:id="@+id/offer"
+            android:id="@+id/sensing_off"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@drawable/toggle_widget_background"
             android:button="@null"
             android:gravity="center"
-            android:text="@string/lgt_off"
+            android:text="@string/sensing_off"
             android:textColor="@color/white" />
     </RadioGroup>
 
+    <RadioGroup
+        android:checkedButton="@+id/blinking_on"
+        android:id="@+id/blinking_toggle"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_marginBottom="50dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginTop="50dp"
+        android:background="@drawable/out_line"
+        android:orientation="horizontal">
+
+        <RadioButton
+            android:layout_marginEnd="1dp"
+            android:layout_marginTop="1dp"
+            android:layout_marginBottom="1dp"
+            android:id="@+id/blinking_off"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/toggle_widget_background"
+            android:button="@null"
+            android:gravity="center"
+            android:text="@string/blinking_off"
+            android:textColor="@color/white" />
 
 
-    <!-- More GUI components go here  -->
+        <RadioButton
+            android:layout_marginTop="1dp"
+            android:layout_marginStart="1dp"
+            android:layout_marginEnd="1dp"
+            android:id="@+id/blinking_on"
+            android:background="@drawable/toggle_widget_background"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:button="@null"
+            android:gravity="center"
+            android:text="@string/blinking_on"
+            android:textColor="@color/white" />
+    </RadioGroup>
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Brightness"
+        android:textSize="20sp"
+
+        />
+
+    <SeekBar
+        android:id="@+id/brightnessBar"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="50dp"
+        android:max="5"
+        android:progress="1"
+        android:scaleX="2"
+        android:scaleY="2" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Interval"
+        android:textSize="20sp"
+
+        />
+
+    <SeekBar
+        android:id="@+id/intervalBar"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="50dp"
+        android:max="5"
+        android:progress="1"
+        android:scaleX="2"
+        android:scaleY="2" />
+
+
+    <!--    blinking frequency slider here-->
 
 </LinearLayout>
